--- a/If-vote/app/src/main/res/layout/activity_vote.xml
+++ b/If-vote/app/src/main/res/layout/activity_vote.xml
@@ -8,14 +8,18 @@
 
     <include
         layout="@layout/app_bar_main2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="368dp"
+        android:layout_height="551dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
     </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
