--- a/If-vote/app/src/main/res/drawable/bg_login.xml
+++ b/If-vote/app/src/main/res/drawable/bg_login.xml
@@ -11,6 +11,6 @@
         android:top="2dp"
         android:bottom="2dp"/>
     <solid
-        android:color="#ffffff"/>
+        android:color="@color/colorPrimaryDark"/>
 
 </shape>
