--- a/If-vote/app/src/main/res/layout/activity_login.xml
+++ b/If-vote/app/src/main/res/layout/activity_login.xml
@@ -1,85 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark_grey"
-
+    android:background="@color/graylight"
     tools:context=".LoginActivity">
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:background="@drawable/gradient_login"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="35dp"
+                android:src="@drawable/logo"
+                android:layout_width="150dp"
+                android:layout_height="150dp"/>
+        </LinearLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="350dp"
+            android:layout_height="320dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="200dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:text="Log In"
+                    android:textStyle="bold"
+                    android:textSize="21sp"
+                    android:textColor="#455a64" />
+                <EditText
+                    android:layout_gravity="center_horizontal"
+                    android:id="@+id/nim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:width="320dp"
+                    android:hint="Nim Anda"
+                    android:inputType="textPersonName"
+                    android:paddingTop="10dp"
+                    android:textColor="@color/colorAccent"
+                    android:textColorHint="@color/colorAccent"/>
+                <EditText
+                    android:id="@+id/sandi"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:width="320dp"
+                    android:ems="10"
+                    android:hint="Kata Sandi"
+                    android:inputType="textPassword"
+                    android:textColor="@color/colorAccent"
+                    android:textColorHint="@color/colorAccent" />
+                <Button
+                    android:id="@+id/btn_login"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:width="320dp"
+                    android:background="@drawable/bg_login"
+                    android:clickable="true"
+                    android:padding="10dp"
+                    android:text="Log In"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16dp" />
+                <TextView
+                    android:id="@+id/forgot"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:clickable="true"
+                    android:layout_marginTop="30dp"
+                    android:text="Forgot Password"
+                    android:textColor="#455a64" />
+            </LinearLayout>
+        </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
-
-        <ImageView
-            android:id="@+id/iv"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/logo" />
-
-        <!--<EditText-->
-        <!--android:layout_marginTop="10dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Universitas Komputer Indonesia"-->
-        <!--android:textSize="18sp"-->
-        <!--android:textStyle="bold"-->
-        <!--android:textColor="@color/white"-->
-        <!--android:id="@+id/tv" />-->
-        <EditText
-            android:id="@+id/nim"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:width="320dp"
-            android:hint="Nim Anda"
-            android:inputType="textPersonName"
-            android:paddingTop="10dp"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
-
-        <EditText
-            android:id="@+id/sandi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:width="320dp"
-            android:ems="10"
-            android:hint="Kata Sandi"
-            android:inputType="textPassword"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
-
-        <Button
-            android:id="@+id/btn_login"
-            style="@style/Base.TextAppearance.AppCompat.Body1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:width="320dp"
-            android:background="@drawable/bg_login"
-            android:clickable="true"
-            android:padding="16dp"
-            android:text="Log In"
-            android:textAllCaps="false"
-            android:textColor="#f16f7c"
-            android:textSize="16dp" />
-
-        <TextView
-            android:id="@+id/forgot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true"
-            android:paddingTop="18dp"
-            android:text="Forgot Password"
-            android:textColor="@color/white" />
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
