--- a/If-vote/app/src/main/res/values/colors.xml
+++ b/If-vote/app/src/main/res/values/colors.xml
@@ -5,7 +5,9 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <color name="dark_grey">#ffca28</color>
-    
+    <color name="graylight">#fafafa</color>
+    <color name="startamber">#ffb300</color>
+    <color name="endamber">#ffca28</color>
     <color name="overlayBackground">#7f333639</color>
     <color name="overlay">#0e0d0e</color>
 </resources>
